[package]
name = "sok_sd"
version = "0.1.0"
edition = "2021"

[dependencies]
josekit = "0.8.7"
serde = "1.0.210"
serde_json = "1.0.128"
rand = "0.9.0-alpha.2"
multibase = "0.9.1"
hex = "0.4.3"
zkryptium = "0.3.0"
digest = "0.10.6"
sha2 = "0.10.6"
sha3 = "0.10.8"
rs_merkle = "1.4.2"
csv = "1.3.1"

# delegatable_credentials = "0.8.0"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"

rug = { version = "1.19.2", features = ["serde"], optional = true }

[features]
cl03 = ["zkryptium/cl03", "rug"]
default = []